# Investment-Sample

./: .dockerignore  .gitignore  Dockerfile  README.md  pnpm-lock.yaml  render.yaml  replit.md
backend/: MCP_POLICY_IMPLEMENTATION.md  manual_verification_test.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  env_loader.py
backend/scripts/: bootstrap_etf_sources.py  build_factsheet_fixtures.py  demo_verification_flow.py  diagnose_network.sh  etf_source_registry.json  generate_blueprint_timing_assessments.py  import_policy_pack.py  load_approved_internal_policy_pack.py  merge_legacy_db.py  migrate_legacy_db.py  production_verify_etf.py  refresh_live_cache.sh  run_updated_mcp_html.sh  run_v2_dev.sh  run_v2_prod.sh  send_daily_brief.py  send_daily_brief.sh  test_etf_fetch.py  verify_etf_candidate.py
backend/tests/: test_analytics_precision.py  test_blueprint_candidate_truth.py  test_blueprint_history.py  test_blueprint_pipeline.py  test_blueprint_policy_stack.py  test_blueprint_recommendations.py  test_blueprint_release1.py  test_blueprint_release3_release4.py  test_blueprint_verification.py  test_brief_approval.py  test_brief_benchmark.py  test_brief_dca.py  test_brief_history_compare.py  test_citation_policy.py  test_cma_engine.py  test_convex_policy.py  test_daily_brief_contract.py  test_daily_brief_explanation_writer.py  test_daily_brief_scheduler.py  test_dashboard_monitoring.py  test_data_lag_mcp_updates.py  test_delta_engine.py  test_dual_horizon.py  test_etf_verification.py  test_etf_verification_new.py  test_framework_cleanup.py  (+16 more)
(+475 files in other folders)
